--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <nav>
   <a href="#">Home</a>
   <a href="https://github.com/cyplx" target="_blank">Github</a>
+  <a href="https://cyplx.tk/cdn/" target="_blank">CDN</a>
 </nav>
 
 <h1>Hi, I'm cyplx</h1>
